web/src/shared/components/HotShowPopup/style.scss
.hotshow-enter {
  opacity: 0;
}

.hotshow-enter.hotshow-enter-active {
  opacity: 1;
  transition: all 500ms ease-in-out;
}

.hotshow-leave {
  opacity: 1;
}

.hotshow-leave.hotshow-leave-active {
  opacity: 0;
  transition: all 500ms ease-in-out;
}
.hotshow-popup {
    position: fixed;
    width: 100%;
    z-index: 4;
    max-height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: auto;
    transition: opacity .5s ease-in-out;


    .hotshow {
        position: absolute;
        transform: translateX(-50%);
        left: 50%;
        z-index: 2;
        top: 0px;
        padding-top: 50px;
        height: 100%;

        .hotshow-topbar {
            background-color: #0077C8;
            margin-bottom: 20px;
            padding: 16px;
            color: #fff;
            display: flex;
            flex-wrap: wrap;
            align-items: center;
            @media(max-width: 860px){
                padding: 10px;
                margin-bottom: 10px;
            }
            .hotshow-topbar-left{
                span{
                    color: #FFFFFF;
                    font-family: 'Rubik', sans-serif;
                    font-size: 14px;
                    line-height: 17px;
                    margin: 0px;
                    padding: 0px;
                    font-weight: 300;
                    @media(max-width: 860px){
                        font-size: 14px;
                        line-height: 16px;
                    }
                }
            }
            .hotshow-topbar-right {
                margin-left: auto;
                @media(max-width: 767px){
                    margin-left: unset;
                    margin-top: 10px;
                }
                span{
                    color: #FFFFFF;
                    font-family: 'Montserrat', sans-serif;
                    font-size: 16px;
                    font-weight: 500;
                    line-height: 19px;
                    margin: 0px;
                    padding: 0px;
                    display: flex;
                    align-items: end;
                    cursor: pointer;
                    @media(max-width: 860px){
                        font-size: 14px;
                        line-height: 16px;
                    }
                    img{
                        margin-left: 11px;
                        @media(max-width: 860px){
                            margin-left: 8px;
                            max-width: 20px;
                        }

                    }
                    &:hover{
                        img{
                            animation: seeallbtn 0.5s linear;
                            animation-iteration-count: infinite;
                        }
                    }
                }
            }
        }
        &.container{
            background-color: transparent;
            max-width: 1007px;
        }
    }
    .hotshow-wrapper {
        display: flex;
        flex-wrap: wrap;
        width: 100%;
        align-items: baseline;
        .hotshow-block{
            padding: 3px;
            background-color: #ffffff;
            flex: 0 0 47%;
            width: 47%;
            margin-bottom: 30px;
            @media(max-width: 860px){
                flex: 0 0 100%;
                width: 100%;
                margin-bottom: 10px;
            }
            &:nth-child(2){
                margin-left: auto;
            }
            .hotshowimg{
                min-height: 190px;
                background-color: #e8e8e8;
                img, div {
                    width: 100% !important;
                    height: auto;
                }
            }
            .hotshow-content{
                padding: 20px;
                max-height: 360px;
                overflow: auto;
                @media(max-width: 860px){
                    padding: 10px 7px;
                }
                h3{
                    color: #343434;
                    font-family: 'Rubik', sans-serif;
                    font-size: 18px;
                    font-weight: 500;
                    line-height: 20px;
                    margin-bottom: 5px;
                    @media(max-width: 860px){
                        font-size: 16px;
                    }
                }
                ul{
                    li{
                        list-style: none;
                        margin-bottom: 15px;
                        @media(max-width: 860px){
                            margin-bottom: 10px;
                        }
                        h4{
                            color: #343434;
                            font-family: 'Rubik', sans-serif;
                            font-size: 16px;
                            font-weight: 500;
                            line-height: 20px;
                            @media(max-width: 860px){
                                font-size: 14px;
                                display: none;
                            }
                            span{
                                font-size: 14px;
                                font-style: italic;
                                line-height: 20px;
                                padding-left: 5px;
                            }
                        }
                        p{
                            color: #626262;
                            font-family: 'Rubik', sans-serif;
                            font-size: 14px;
                            line-height: 17px;
                            font-weight: normal;
                            margin-bottom: 5px;
                            padding: 0px;
                            @media(max-width: 860px){
                                font-size: 13px;
                                line-height: 15px;
                                display: none;
                            }
                        }
                    }
                }
                p{
                    color: #626262;
                    font-family: 'Rubik', sans-serif;
                    font-size: 14px;
                    line-height: 20px;
                    font-weight: normal;
                    margin-bottom: 5px;
                    padding: 0px;
                    @media(max-width: 860px){
                        font-size: 13px;
                        line-height: 15px;
                        display: none;
                    }
                }
                .hotshow-note{
                    color: #343434;
                    font-family: 'Rubik', sans-serif;
                    font-size: 14px;
                    font-style: italic;
                    font-weight: 500;
                    line-height: 17px;
                    width: 100%;
                    display: block;
                    margin-bottom: 10px;
                    @media(max-width: 860px){
                        display: none;
                    }
                }
                a{
                    font-size: 16px;
                    font-weight: 500;
                    line-height: 19px;
                    text-align: center;
                    padding: 10px 18px;
                    display: inline-block;
                    background: #0077C8;
                    color: #FFF;
                    margin-top: 10px;
                    @media(max-width: 860px){
                        font-size: 14px;
                        line-height: 18px;
                        padding: 5px 10px;
                    }
                }
            }
        }
        .hotshow-block.hotshow-block-fullwidth{
            flex: 0 0 100%;
            width: 100%;
            display: flex;
            flex-wrap: wrap;
            padding: 14px;
            @media(max-width: 991px){
                padding: 3px;
            }
            .hotshowimg{
                flex: 0 0 65%;
                min-height: 246px;
                background-color: #e8e8e8;
                @media(max-width: 991px){
                    flex: 0 0 100%;
                }
            }
            .hotshow-content{
                flex: 0 0 35%;
                padding: 0 0 0px 15px;
                @media(max-width: 991px){
                    flex: 0 0 100%;
                    padding: 10px;
                }
                ul{
                    li{
                        margin-bottom: 13px;
                        h4{
                            @media(max-width: 860px){
                                font-size: 14px;
                                display: block;
                            }
                        }
                        p{
                            @media(max-width: 860px){
                                font-size: 13px;
                                line-height: 15px;
                                display: block;
                            }
                        }
                    }
                    @media(max-width:991px){
                        display: block;
                    }
                }
                .hotshow-note{
                    @media(max-width: 991px){
                        display: block;
                    }
                }
            }
        }
    }
    .hotshow-overlay {
        position: fixed;
        background-color: #000000;
        width: 100%;
        height: 100%;
        top: 0;
        right: 0px;
        bottom: 0;
        left: 0px;
        opacity: 0.6;
        z-index: 2;
    }

}
// hotshow overlay
.hotshowpopup-overlay{
    overflow: hidden;
}

